--- a/P000481.opf/layers/v001/Pagination.yml
+++ b/P000481.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4a532d9dca924e3aa749cae3d6830fd8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   070f3a695a7d48f99ba43a4a611120f4:
