--- a/P000481.opf/meta.yml
+++ b/P000481.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000481
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG15510
   title: གངས་ལྗོངས་ལྷ་ཡི་རྔ་སིལ་རབ་དགའ་དགྱེས་པའི་ཆོས་དབྱངས།
@@ -11,10 +13,3 @@ source_metadata:
       volume_number: 1
       total_pages: 520
       base_file: v001.txt
-ebook_metadata:
-  title: གངས་ལྗོངས་ལྷ་ཡི་རྔ་སིལ་རབ་དགའ་དགྱེས་པའི་ཆོས་དབྱངས།
-  author: ''
-  sku: P000481
-  cover: cover.jpg
-  layers:
-  - pagination
