--- a/P000481.opf/meta.yml
+++ b/P000481.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P000481
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-16 15:42:13.075997
 source_metadata:
   id: bdr:W1KG15510
   title: གངས་ལྗོངས་ལྷ་ཡི་རྔ་སིལ་རབ་དགའ་དགྱེས་པའི་ཆོས་དབྱངས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 520
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
